fix html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
     font-family: "Roboto", sans-serif;
     color: #434455;
+    background-color: #ffffff;
 }
 
 h2{
@@ -16,14 +17,6 @@ ul, ol{
     list-style-type: none;
 }
 
-.accent{
-    font-weight: 700;
-        font-size: 18px;
-        line-height: 1.16667;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
-    }
    
 .title{
     background: #2e2f42;
@@ -32,36 +25,39 @@ ul, ol{
 .title-text{
     font-weight: 700;
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
 }
 
 .title-button{
-    border-radius: 4px;
-    padding: 16px 32px;
-    width: 169px;
-    height: 56px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;    
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+}
+
+.title-button:hover,
+.title-button:focus{
+    background-color: #404BBF
 }
 
 .info{
 background: #fff;
 }
 
-h3{
+.main-h{
       font-weight: 500;
         font-size: 20px;
-        line-height: 1.2;
+        line-height: 1.11;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        text-transform: capitalize
 }
 
 .main-text{
@@ -87,34 +83,37 @@ background: #2e2f42;
         color: #f4f4fd;
 }
 
-.accent{
+.logo{
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-        text-decoration: none;     
+        text-decoration: none; 
+        line-height: 1.17;
 }
 
- .logo-footer{
+ .accent-footer{
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #f4f4fd;
         text-decoration: none;
+        line-height: 1.17;
  }
 
- .logo-header{
+ .accent-header{
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #2e2f42;
         text-decoration: none;
+        line-height: 1.17;
  }
 
  .link{
@@ -132,4 +131,19 @@ background: #2e2f42;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+ }
+ 
+
+ .link:hover,
+ .link:focus{
+    color:#404bbf;
+ }
+
+ .link-address:hover,
+ .link-address:focus {
+     color: #404bbf;
+ }
+
+ .address{
+    font-style: normal;
  }
