--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,16 @@ body{
     background-color: #ffffff;
 }
 
-h2{
+.main-he{
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11111;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    line-height: 1.2;
+    text-transform: capitalize;
+    background-color: #FFFFFF;
 }
 
 ul, ol{
