--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,20 @@ body{
 .main-he{
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    line-height: 1.11;
+    text-transform: capitalize;
+    
+}
+
+.main-h {
+    font-weight: 500;
+    font-size: 20px;
     line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
     text-transform: capitalize;
     background-color: #FFFFFF;
 }
@@ -54,14 +63,6 @@ ul, ol{
 background: #fff;
 }
 
-.main-h{
-      font-weight: 500;
-        font-size: 20px;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        text-transform: capitalize
-}
 
 .main-text{
     font-size: 16px; 
