--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,6 @@ body{
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-transform: capitalize;
-    background-color: #FFFFFF;
 }
 
 ul, ol{
@@ -150,4 +149,8 @@ background: #2e2f42;
 
  .address{
     font-style: normal;
+ }
+
+ .team-photo{
+    background-color: #FFFFFF;
  }
