--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ background: #fff;
 }
 
 .team{
-    background: #f4f4fd;
+    background: #ffffff;
 }
 
 .footer{
@@ -151,6 +151,3 @@ background: #2e2f42;
     font-style: normal;
  }
 
- .team-photo{
-    background-color: #FFFFFF;
- }
